add product card, home page

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,7 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 @import 'variables.scss';
-
-
 
 body {
   padding: 0;
@@ -10,5 +9,46 @@ body {
   box-sizing: border-box;
   font-family: "Roboto", system-ui;
   font-size: $font-normal;
-  font-weight: 400;
+  font-weight: 500;
+}
+
+
+.primary {
+  color: $primary-color;
+}
+
+.secondary {
+  color: $secondary-color;
+}
+
+.warning {
+  color: $warning-color;
+}
+
+.text-small {
+  font-size: $font-small;
+}
+
+.text-large {
+  font-size: $font-large;
+}
+
+.text-line-through {
+  text-decoration: line-through;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.background-primary {
+  background-color: $primary-color;
+  color: #fff;
+}
+
+.border-color-primary {
+  border: 1px solid $primary-color;
+  border-radius: $border-radius-small;
+}
+
+.border-color-secondary {
+  border: 1px solid $secondary-color;
+  border-radius: $border-radius-small;
 }
