--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,9 +1,15 @@
 // colors
 $primary-color: #FF0036;
 $secondary-color: #FF5000;
+$warning-color: #FFCE3D;
+$muted-color: #F5F5F5;
 
 // font-size
 $font-small: 10px;
 $font-normal: 13px;
 $font-medium: 16px;
 $font-large: 20px;
+
+// border-radius
+$border-radius-small: 5px;
+$border-radius-medium: 10px;
