--- a/src/layout/user/header/header.scss
+++ b/src/layout/user/header/header.scss
@@ -11,10 +11,10 @@
 
 .fixed-search {
     position: fixed;
-    width: 100vw;
+    width: 100%;
     top: 0;
     z-index: 999;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: -2px 0 30px 2px rgba(97, 105, 119, 0.18);
 }
 
 .search-wrapper {
@@ -43,6 +43,11 @@
 
 .search-arround {
     width: 25%;
+    display: flex;
+    align-items: center;
+    padding-left: 50px;
+    color: $primary-color;
+    font-size: $font-large;
 }
 
 .search-button {
