--- a/src/index.scss
+++ b/src/index.scss
@@ -10,8 +10,9 @@ body {
   font-family: "Roboto", system-ui;
   font-size: $font-normal;
   -webkit-font-smoothing: antialiased;
-  font-weight: 400;
+  font-weight: 500;
 }
+
 
 // ======================== text ===============================
 
@@ -31,8 +32,16 @@ body {
   color: $muted-color;
 }
 
+.text-blur {
+  color: rgba(0, 0, 0, 0.5)
+}
+
 .text-small {
   font-size: $font-small;
+}
+
+.text-normal {
+  font-size: $font-normal;
 }
 
 .text-medium {
@@ -139,3 +148,17 @@ body {
 }
 
 // ================================================================
+
+
+@media (max-width: 768px) {
+  body {
+    font-size: $font-small;
+  }
+  .text-medium {
+    font-size: $font-normal;
+  }
+
+  .text-small {
+    font-size: 8px;
+  }
+}
