--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,6 +3,7 @@ $primary-color: #FF0036;
 $secondary-color: #FF5000;
 $warning-color: #FFCE3D;
 $muted-color: #F5F5F5;
+$info-color: rgb(60, 155, 218);
 
 // font-size
 $font-small: 10px;
