--- a/src/layout/user/footer/footer.scss
+++ b/src/layout/user/footer/footer.scss
@@ -1,31 +1,48 @@
-.footer {
-    background-color: #f8f8f8;
+.footer-content {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 20px;
+
+}
+.footer-section {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch; 
+  // justify-content: space-between;
+  height: 100%; 
+  padding: 10px;
+  background-color: #f8f8f8;
+}
+
+h5 {
+  margin-bottom: 15px;
+}
+
+ul {
+  list-style: none;
+  padding-left: 0;
   
-    h5 {
-      font-weight: bold;
-      margin-bottom: 15px;
-    }
-  
-    ul {
-      list-style: none;
-      padding-left: 0;
-      li {
-        font-size: 14px;
-        margin-bottom: 10px;
-      }
-    }
-  
-    img {
-      width: 50px;
-      margin-bottom: 10px;
-    }
-  
-    .footer-bottom {
-      margin-top: 30px;
-      font-size: 14px;
-      p {
-        margin-bottom: 5px;
-      }
-    }
+  li {
+    font-size: 14px;
+    margin-bottom: 10px;
   }
+}
+
+img {
+  width: 50px;
+  margin-bottom: 10px;
+}
+
+.footer-section .d-flex {
+  justify-content: center;
+}
+
+.footer-bottom {
+  margin-top: 30px;
+  font-size: 14px;
+  text-align: center;
   
+  p {
+    margin-bottom: 5px;
+  }
+}
