--- a/src/layout/user/footer/footer.scss
+++ b/src/layout/user/footer/footer.scss
@@ -14,7 +14,7 @@
 
 }
 
-h5 {
+.h5-ft {
   margin-bottom: 15px;
 }
 
@@ -28,7 +28,7 @@ ul {
   }
 }
 
-img {
+.img-ft {
   width: 50px;
   margin-bottom: 10px;
 }
