--- a/src/index.scss
+++ b/src/index.scss
@@ -4,9 +4,11 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 @import 'variables.scss'; // Custom variables
 @import "react-image-gallery/styles/scss/image-gallery.scss";
+@import 'simplebar-react/dist/simplebar.min.css';
 
 // Global styles and custom classes
-body {
+body,
+pre {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -15,10 +17,17 @@ body {
   -webkit-font-smoothing: antialiased;
   font-weight: 500;
 }
+
 .no-shadow {
   box-shadow: none !important;
 }
 
+.simplebar-scrollbar::before {
+  background-color: #ff6347 !important; 
+  border-radius: 10px; 
+  width: 8px; 
+  transition: background-color 0.3s ease; 
+}
 
 // ======================== text ===============================
 
@@ -33,9 +42,11 @@ body {
 .warning {
   color: $warning-color;
 }
+
 .info {
   color: $info-color;
 }
+
 .muted {
   color: $muted-color;
 }
@@ -58,6 +69,10 @@ body {
 
 .text-bold {
   font-weight: bold;
+}
+
+.text-wm {
+  font-weight: 500;
 }
 
 .text-large {
@@ -93,6 +108,11 @@ body {
   color: black;
 }
 
+.bg-main {
+
+  background-color: rgb(246, 246, 246);
+}
+
 // ================================================================
 
 // ======================== border ================================
@@ -110,8 +130,17 @@ body {
 .border-radius-small {
   border-radius: $border-radius-small;
 }
+
 .border-radius-medium {
   border-radius: $border-radius-medium;
+}
+
+.bd-tl-radius-sm {
+  border-top-left-radius: $border-radius-small;
+}
+
+.bd-tr-radius-sm {
+  border-top-right-radius: $border-radius-small;
 }
 
 // ================================================================
@@ -141,13 +170,16 @@ body {
 
 .button-hover {
   transition: opacity 0.3s ease;
+
   &:hover {
     opacity: 0.7;
   }
 }
+
 .btn-pointer {
   cursor: pointer;
 }
+
 .btn-ir {
   width: 20px;
   height: 20px;
@@ -177,6 +209,7 @@ body {
   body {
     font-size: $font-small;
   }
+
   .text-medium {
     font-size: $font-normal;
   }
@@ -188,5 +221,6 @@ body {
 
 
 pre {
-  white-space: pre; /* Đảm bảo giữ nguyên định dạng dòng và khoảng trắng */
+  white-space: pre;
+  /* Đảm bảo giữ nguyên định dạng dòng và khoảng trắng */
 }
