update ui insert-product admin

--- a/src/index.scss
+++ b/src/index.scss
@@ -17,6 +17,9 @@ pre {
   -webkit-font-smoothing: antialiased;
   font-weight: 500;
 }
+span{
+  color: #333;
+}
 
 .no-shadow {
   box-shadow: none !important;
