--- a/src/pages/seller/product/insert-product.scss
+++ b/src/pages/seller/product/insert-product.scss
@@ -148,3 +148,20 @@
     display: block;
   }
   
+/* Định nghĩa animation cho bóng mờ */
+@keyframes scale-up {
+    from {
+      transform: scale(1);
+      box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+    }
+    to {
+      transform: scale(1.05);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Thay đổi kích thước và màu sắc của bóng mờ */
+    }
+  }
+  
+  /* Hiệu ứng bóng mờ khi di chuyển ảnh */
+  .draggable-shadow {
+    animation: scale-up 0.2s ease;
+  }
+  
