create ui category manager

--- a/src/index.scss
+++ b/src/index.scss
@@ -194,4 +194,8 @@ pre {
   white-space: pre; /* Đảm bảo giữ nguyên định dạng dòng và khoảng trắng */
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
 
