--- a/src/pages/user/home/home.scss
+++ b/src/pages/user/home/home.scss
@@ -19,8 +19,9 @@
 
 .products {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
     row-gap: 10px;
+    column-gap: 10px;
     justify-items: center;
 }
 
