--- a/src/pages/admin/product/insert-product.scss
+++ b/src/pages/admin/product/insert-product.scss
@@ -106,29 +106,33 @@
         outline: 1px solid $info-color
     }
 }
-.textarea-basic-information-seller{
+
+.textarea-basic-information-seller {
     width: 100%;
     padding: 12px;
     border: 1px solid #ccc;
     border-radius: $border-radius-small;
     resize: none;
-    &:hover
-     {
+
+    &:hover {
         border-color: $info-color
     }
+
     &:focus {
         outline: 1px solid $info-color
     }
 
 }
-.category-seller{
+
+.category-seller {
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    input{
-        cursor: pointer; 
+
+    input {
+        cursor: pointer;
     }
 }
 
@@ -142,26 +146,86 @@
     background-color: white;
     border-radius: 6px;
     padding: 4px;
-  }
-  
-  .img-container:hover .icon-delete {
+}
+
+.img-container:hover .icon-delete {
     display: block;
-  }
-  
+}
+
 /* Định nghĩa animation cho bóng mờ */
 @keyframes scale-up {
     from {
-      transform: scale(1);
-      box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+        transform: scale(1);
+        box-shadow: 0 0 0 rgba(0, 0, 0, 0);
     }
+
     to {
-      transform: scale(1.05);
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Thay đổi kích thước và màu sắc của bóng mờ */
+        transform: scale(1.05);
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        /* Thay đổi kích thước và màu sắc của bóng mờ */
     }
-  }
-  
-  /* Hiệu ứng bóng mờ khi di chuyển ảnh */
-  .draggable-shadow {
+}
+
+/* Hiệu ứng bóng mờ khi di chuyển ảnh */
+.draggable-shadow {
     animation: scale-up 0.2s ease;
-  }
-  
+}
+
+.btn-save-all-category-1 {
+    border: none;
+    width: 20%;
+    border-radius: $border-radius-small;
+    background-color: $primary-color;
+    color: white;
+    padding: 10px;
+    font-size: 15px;
+    font-weight: 500;
+
+    &:hover {
+        background-color: rgb(245, 78, 78);
+    }
+
+    // Khi nút bị khóa (disabled)
+    &:disabled {
+        background-color: rgb(239, 123, 123);
+        cursor: not-allowed; // Thay đổi con trỏ khi nút bị khóa
+    }
+}
+.custom-table-product>:not(caption)>*>* {
+    padding: 0;
+    &:nth-child(1){
+        width: 5%;
+    }
+    &:nth-child(2) {
+        width: 10%;
+    }
+
+    &:nth-child(3){
+        width: 35%;
+    }
+    &:nth-child(4) {
+        width: 15%;
+    }
+    &:nth-child(5){
+        width: 5%;
+    }
+}
+
+.custom-table-product thead tr th {
+    vertical-align: middle;
+    text-align: center;
+    height: 50px;
+    background-color: #a6c9cf;
+}
+.custom-table-product tbody tr td {
+    vertical-align: middle;
+    height: 50px;
+    text-align: center;
+    // background-color: #a6c9cf;
+    font-size: $font-normal;
+    background-color: #ffffff;  
+}
+.avatar-dropdown{
+    text-decoration: none;
+    color: black;
+}
