--- a/src/index.scss
+++ b/src/index.scss
@@ -90,7 +90,9 @@ span{
 .text-blur {
   color: rgba(0, 0, 0, 0.5)
 }
-
+.text-orange{
+  color: #f3a877;
+}
 .text-small {
   font-size: $font-small;
 }
@@ -285,3 +287,12 @@ pre {
   max-height: calc(100vh - 120px);
 }
 
+.no-spinner {
+  -moz-appearance: textfield; /* Firefox */
+}
+
+.no-spinner::-webkit-inner-spin-button, 
+.no-spinner::-webkit-outer-spin-button {
+  -webkit-appearance: none; /* Chrome, Safari, Edge */
+  margin: 0; 
+}
