--- a/src/pages/admin/product/insert-product.scss
+++ b/src/pages/admin/product/insert-product.scss
@@ -269,12 +269,12 @@
 
 .custom-table-product-stock tbody tr td {
     vertical-align: middle;
-    height: 50px;
     text-align: center;
     // background-color: #a6c9cf;
     font-size: $font-normal;
     background-color: #ffffff;
 }
+
 .custom-table-product-stock-import>:not(caption)>*>* {
     padding: 0;
 
@@ -283,11 +283,11 @@
     }
 
     &:nth-child(2) {
-        width: 15%;
+        width: 25%;
     }
 
     &:nth-child(3) {
-        width: 35%;
+        width: 15%;
     }
 
     &:nth-child(4) {
@@ -299,10 +299,14 @@
     }
 
     &:nth-child(6) {
+        width: 10%;
+    }
+
+    &:nth-child(7) {
         width: 15%;
     }
-    &:nth-child(7) {
-        width: 10%;
+    &:nth-child(8) {
+        width: 5%;
     }
 }
 
@@ -321,13 +325,54 @@
     font-size: $font-normal;
     background-color: #ffffff;
 }
+.custom-table-product-stock-cs thead tr th {
+    vertical-align: middle;
+    text-align: center;
+    height: 40px;
+    background-color: #a6c9cf;
+}
+.custom-table-product-stock-cs>:not(caption)>*>* {
+    padding: 0;
+
+    &:nth-child(1) {
+        width: 30%;
+    }
+
+    &:nth-child(2) {
+        width: 10%;
+    }
+
+    &:nth-child(3) {
+        width: 15%;
+    }
+
+    &:nth-child(4) {
+        width: 15%;
+    }
+
+    &:nth-child(5) {
+        width: 15%;
+    }
+
+    &:nth-child(6) {
+        width: 15%;
+    }
+}
+.custom-table-product-stock-cs tbody tr td {
+    vertical-align: middle;
+    text-align: center;
+    height: 50px;
+    // background-color: #a6c9cf;
+    font-size: $font-normal;
+    background-color: #ffffff;
+}
 .avatar-dropdown {
     text-decoration: none;
     color: black;
 }
 
 .search-list-product {
-    border: 1px solid rgb(180, 173, 173);
+    border: 0.5px solid rgb(180, 173, 173);
     border-radius: $border-radius-small;
     width: 33%;
     padding: 3px 10px 3px 10px;
@@ -335,10 +380,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: white
+    background-color: white;
+    
 }
 
 .input-search-list-product {
+    position: relative;
     border: none;
     flex: 1;
 
@@ -369,5 +416,73 @@
 
     &:active {
         opacity: 0.5;
+    }
+}
+
+.color-stock {
+    display: flex;
+    align-items: center;
+    min-width: 90px;
+}
+.color-stock1 {
+    display: flex;
+    align-items: center;
+    min-width: 20px;
+}
+
+.truncate-text {
+    display: inline-block;
+    max-width: 20ch;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.sticky-header{
+    position: sticky;
+    top:-1px;
+}
+@keyframes shadowPulse {
+    0% {
+        box-shadow: 0 4px 8px rgba(247, 141, 83, 0.3);
+    }
+    50% {
+        box-shadow: 0 8px 16px rgba(247, 141, 83, 0.5); /* Tăng kích thước bóng */
+    }
+    100% {
+        box-shadow: 0 4px 8px rgba(247, 141, 83, 0.3);
+    }
+}
+.inActiveProduct{
+    border: none;
+    display: inline-block;
+    padding: 5px 10px 5px 10px;
+    color: #ffffff;
+    background-color: #f78d53;
+    box-shadow: 0 4px 8px rgba(247, 141, 83, 0.2);
+    border-radius: 5px;
+    transition: box-shadow 0.3s ease;
+    animation: shadowPulse 0.8s infinite;
+}
+.search-result{
+    position: absolute;
+    padding: 10px;
+    border-radius: 5px;
+    top:40px;
+    width: 100%; // Chiều rộng đầy đủ của search-list-product
+    left: 0; // Để đảm bảo nó bắt đầu từ bên trái của search-list-product
+    z-index: 1;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    .search-result-cs{
+        padding: 8px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        border-bottom: 0.5px solid rgb(241, 144, 144);
+        border-radius: 4px;
+        cursor: pointer;
+        &:hover{
+            background-color: #f78d53;
+            color: white;
+        }
     }
 }
