--- a/src/layout/admin/admin-layout.scss
+++ b/src/layout/admin/admin-layout.scss
@@ -14,7 +14,7 @@
     position: fixed;
     padding-left: 200px;
     width: 100vw;
-    height: 70px;
+    height: 60px;
     background-color: #fff;
     z-index: 998;
 }
@@ -29,7 +29,7 @@
     position: fixed;
     width: 200px;
     height: 100vh;
-    border-right: 1px solid #f0f0f0;
+    // border-right: 1px solid #f0f0f0;
     z-index: 999;
 }
 
