--- a/src/layout/admin/navbar/navbar.scss
+++ b/src/layout/admin/navbar/navbar.scss
@@ -102,6 +102,7 @@
 
 .custom-table-category thead tr th {
     vertical-align: middle;
+    text-align: center;
     height: 50px;
     background-color: #a6c9cf;
 }
