--- a/src/components/seller/modal/category-modal.scss
+++ b/src/components/seller/modal/category-modal.scss
@@ -54,7 +54,7 @@
     /* Ví dụ: chỉnh lại margin */
     padding: 0px;
     /* Ví dụ: chỉnh lại padding */
-    flex: 1;
+    // flex: 1;
     /* Đảm bảo các cột chiếm toàn bộ không gian nếu cần */
 }
 
