--- a/src/index.scss
+++ b/src/index.scss
@@ -330,3 +330,11 @@ pre {
   pointer-events: none;
   user-select: none;
 }
+.shadow-all {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: box-shadow 0.3s ease;
+}
+
+.shadow-all:hover {
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
+}
