--- a/src/pages/user/auth/register/verify-email.scss
+++ b/src/pages/user/auth/register/verify-email.scss
@@ -6,7 +6,14 @@
 
 .input-number {
     display: flex;
+    border:none;
     width: 50px;
     height: 50px;
     text-align: center;
+    outline: 1px solid rgb(243, 117, 8);
+    
+   
+}
+.input-number:focus {
+    outline: 1px solid rgb(243, 117, 8); /* Đảm bảo border vẫn đỏ khi focus */
 }
