--- a/src/layout/user/header/header.scss
+++ b/src/layout/user/header/header.scss
@@ -31,6 +31,7 @@
 .search-center {
     display: flex;
     flex: 1;
+    position: relative;
 }
 
 .search-input {
@@ -56,6 +57,12 @@
     border: none;
     font-size: $font-medium;
     font-weight: bold;
+}
+
+.search-content {
+    &:hover {
+        background-color: rgb(220, 220, 220);
+    };
 }
 
 @media (max-width: 768px) {
