--- a/src/pages/admin/product/insert-product.scss
+++ b/src/pages/admin/product/insert-product.scss
@@ -7,7 +7,6 @@
 }
 
 .btn-group-insert-product-seller {
-
     width: 150px;
     height: 50px;
     padding: 10px;
@@ -387,8 +386,8 @@
 .input-search-list-product {
     position: relative;
     border: none;
+    width: 100%;
     flex: 1;
-
     &:focus {
         outline: none;
     }
@@ -485,4 +484,55 @@
             color: white;
         }
     }
+}
+
+.btn-save-all-products {
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    border-radius: $border-radius-small;
+    background-color: $primary-color;
+    color: white;
+    font-weight: 500;
+
+    &:hover {
+        background-color: rgb(245, 78, 78);
+    }
+
+    // Khi nút bị khóa (disabled)
+    &:disabled {
+        background-color: rgb(239, 123, 123);
+        cursor: not-allowed; // Thay đổi con trỏ khi nút bị khóa
+    }
+}
+@media(max-width:768px){
+    .custom-table-product>:not(caption)>*>* {
+        font-size: 8px !important;
+    }
+    .btn-save-all-products{
+        font-size: 8px;
+    }
+    .search-list-product{
+        width: auto;
+        font-size: 8px;
+    }
+    .btn-save-all-category-1{
+        width: auto;
+    }   
+    .custom-table-product-stock>:not(caption)>*>* {
+        font-size: 8px !important;
+
+    }
+    .icon-stock-pr{
+        font-size: 10px;
+    }
+    .inActiveProduct{
+        font-size: 6px;
+    }
+    .custom-table-product-stock-import>:not(caption)>*>* {
+        font-size: 8px !important;
+    }
+  
 }
