--- a/src/pages/user/cart/cart-item.scss
+++ b/src/pages/user/cart/cart-item.scss
@@ -13,6 +13,7 @@
 .btn-buy {
   width: 200px;
   height: 45px;
+
   &:disabled {
     opacity: 0.5;
     cursor: not-allowed;
@@ -47,52 +48,52 @@
   position: absolute;
   top: 40px;
   left: 0;
-  width: 300px;
+  width: 210%;
+  transform-origin: top left;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  z-index: 10;
+  z-index: 100;
+  background-color: rgba(255, 253, 250, 1); /* Nhạt hơn một chút */
+  font-size: 10px;
+  border: none;
 
-  // Mũi tên nhọn
-  &::before {
-    content: '';
-    position: absolute;
-    top: -10px;
-    /* Điều chỉnh vị trí theo nhu cầu */
-    left: 50%;
-    /* Điều chỉnh để căn giữa hoặc thay đổi vị trí */
-    transform: translateX(-50%);
-    border-width: 0 10px 10px 10px;
-    /* Độ rộng của mũi tên */
-    border-style: solid;
-    border-color: transparent transparent rgb(197, 20, 20) transparent;
-    /* Màu sắc của mũi tên, tương ứng với màu nền */
-  }
-
-  .options-container {
-    background-color: white;
-    padding: 1rem;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-  }
 }
+.attr1-update{
+  display: flex;
+  flex-wrap:  wrap;
 
+}
+.btn-check-variant {
+  display: flex ;
+  min-width: 10px;
+  margin: 5px;
+
+}
 .fixed-footer {
   position: fixed;
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
-  width: calc(100% - 30px); 
+  width: calc(100% - 30px);
   z-index: 2;
   background-color: white;
   box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
 }
+
 .fixed-header {
   position: fixed;
   top: 80px;
   left: 50%;
   transform: translateX(-50%);
-  width: calc(100% - 30px); 
+  width: calc(100% - 30px);
   z-index: 1000;
   // background-color: white;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+@media(max-width: 768px){
+ .variant-options{
+  left: -90%;
+  width: 195%;
+ }
 }
 
