--- a/src/pages/user/payment/payment.scss
+++ b/src/pages/user/payment/payment.scss
@@ -1,3 +1,4 @@
+@import "../../../variables.scss";
 .payment-button {
     font-size: 13px;
     padding: 10px;
@@ -6,23 +7,46 @@
     justify-content: center;
     width: 200px;
     background-color: white;
-    color: rgb(67, 64, 64);
-    border: 1px solid rgb(67, 64, 64);
-    &:hover{
-        background-color: white;
-        color: rgb(214, 38, 38);
-        border: 1px solid rgb(214, 38, 38);
-    }
-    &:active{
-        background-color: white;
-        border: 1px solid rgb(214, 38, 38);
+    color: rgb(209, 24, 24);
+    border: none;
+    outline: 0.2px solid rgb(239, 77, 24);
+    box-shadow: 0px 4px 6px rgba(234, 8, 8, 0.1); 
+    transition: box-shadow 0.3s ease, background-color 0.3s ease, color 0.3s ease;
+    &.active{
+        background-color: rgb(239, 77, 24);
+        color: white;;
     }
 }
 .order-payment{
-    // border: 1px solid rgb(67, 64, 64);
-    // padding: 10px;
+
     width: 100%;
     max-height: 275px;
     overflow-x: hidden !important;
 
+}
+.btn-payment-success {
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: $border-radius-small;
+    background-color: $primary-color;
+    color: white;
+    font-weight: 500;
+    width: 100%;
+    padding: 10px;
+    &:hover {
+        background-color: rgb(245, 78, 78);
+    }
+
+    // Khi nút bị khóa (disabled)
+    &:disabled {
+        background-color: rgb(239, 123, 123);
+        cursor: not-allowed; // Thay đổi con trỏ khi nút bị khóa
+    }
+}
+@media(max-width:768px){
+    .payment-button{
+        font-size: 10px;
+    }
 }
