update ui promotion

--- a/src/index.scss
+++ b/src/index.scss
@@ -63,7 +63,9 @@ span{
 }
 
 // ======================== text ===============================
-
+.text-medium-cs{
+  font-size: 12px;
+}
 .primary {
   color: $primary-color;
 }
